fix(css): update scroll top z-index and plp img display

--- a/blocks/product-list-page/product-list-page.css
+++ b/blocks/product-list-page/product-list-page.css
@@ -127,7 +127,7 @@
 .block.product-list-page .dropin-product-item-card__image,
   .block.product-list-page .dropin-product-item-card__image a,
   .block.product-list-page .dropin-product-item-card__image picture {
-    display: flex;
+    display: block;
     width: 100%;
     height: 100%;
   }
