--- a/styles/_scroll-top.css
+++ b/styles/_scroll-top.css
@@ -2,7 +2,6 @@
   position: fixed;
   bottom: 24px;
   right: 24px;
-  z-index: 99;
   width: 44px;
   height: 44px;
   border: 1px solid var(--color-neutral-300);
@@ -14,6 +13,7 @@
   transition: background-color 0.2s ease, opacity 0.2s ease, visibility 0.2s ease;
   opacity: 0;
   visibility: hidden;
+  z-index: 1;
 }
 .scroll-to-top::after {
     display: block;
