--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -115,7 +115,6 @@
   position: fixed;
   bottom: 24px;
   right: 24px;
-  z-index: 99;
   width: 44px;
   height: 44px;
   border: 1px solid var(--color-neutral-300);
@@ -127,6 +126,7 @@
   transition: background-color 0.2s ease, opacity 0.2s ease, visibility 0.2s ease;
   opacity: 0;
   visibility: hidden;
+  z-index: 1;
 }
 
 .scroll-to-top::after {
